fix: ajusted the gap between the Details components

--- a/src/app/components/About/Details/details.module.css
+++ b/src/app/components/About/Details/details.module.css
@@ -4,6 +4,7 @@
 	justify-content: center;
 	align-items: flex-start;
 	font-size: 1.063rem;
+	gap: 5px;
 }
 
 .container h2 {
