--- a/src/app/components/About/about.module.css
+++ b/src/app/components/About/about.module.css
@@ -10,7 +10,8 @@
 }
 
 .details {
-	display: flex;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: auto auto auto auto;
+	gap: 7rem;
 	margin-top: 4.5rem;
 }
